fixed spacing in product prev

--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -56,7 +56,7 @@ body {
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 2em;
+    gap: 1.2em;
     padding: 2em 3em;
 }
 
